compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__qualified_type_not_fn_in_use.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\nimport some_mod as sm\npub fn main(func: sm.Function(Int, String, Float)) {\n  use <- func()\n}\n"
---
error: Type mismatch
  ┌─ /src/one/two.gleam:4:10
  │
4 │   use <- func()
  │          ^^^^^^

In a use expression, there should be a function on the right hand side of
`<-`, but this value has type:

    sm.Function(Int, String, Float)

See: https://tour.gleam.run/advanced-features/use/
